--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,7 @@
     android:gravity="bottom"
     sothree:umanoPanelHeight="0dp"
     sothree:umanoShadowHeight="4dp"
-    layout_height="100dp"
+    layout_height="0dp"
     app:ignore="NamespaceTypo">
 
     <RelativeLayout
@@ -35,20 +35,23 @@
     </RelativeLayout>
 
     <!-- Panel -->
+<RelativeLayout
+    android:id="@+id/main_rl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/main_hydrant_image_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/main_ll"
         android:orientation="vertical"
+        android:layout_margin="0dp"
         android:background="@color/backgroundGray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/main_hydrant_image_img"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
 
         <!-- 概要信息 -->
         <android.support.v7.widget.CardView
@@ -73,7 +76,7 @@
                         android:textColor="@color/fontBlack"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -443,6 +446,9 @@
         </ScrollView>
 
     </LinearLayout>
+
+</RelativeLayout>
+
 
 
 
